methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:7: error: not found: value color
    if ((getCouleurSol() == color.green)){
                            ^SlugTracking:11: error: type mismatch;
 found   : Unit
 required: Boolean
    recule()
          ^